--- a/src/patternlab-files/pattern-header-footer/header.html
+++ b/src/patternlab-files/pattern-header-footer/header.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Pattern Lab Pattern</title>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<!-- never cache patterns -->
 	<meta http-equiv="cache-control" content="max-age=0" />
@@ -11,6 +11,23 @@
 	<meta http-equiv="expires" content="0" />
 	<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 	<meta http-equiv="pragma" content="no-cache" />
+
+	<!-- Twitter Meta Tags-->
+	<link
+			rel="me"
+			href="https://twitter.com/codingdesigner">
+	<meta
+			name="twitter:widgets:theme"
+			content="light">
+	<meta
+			name="twitter:widgets:link-color"
+			content="#ff00ff">
+	<meta
+			name="twitter:widgets:border-color"
+			content="#ff00ff">
+
+	<!--Import fonts-->
+	<link rel="stylesheet" type="text/css" href="//cloud.typography.com/6578432/738084/css/fonts.css" />
 
 	<!--
 		Styleguide CSS is included for
