--- a/src/patternlab-files/pattern-header-footer/footer.html
+++ b/src/patternlab-files/pattern-header-footer/footer.html
@@ -32,6 +32,7 @@
 	<!-- /DO NOT MODIFY -->
 
   <!-- inject:js -->
+  <script src="../../../../bower_components/jquery/jquery.js"></script>
   <script src="../../../../bower_components/lodash/lodash.js"></script>
   <script src="../../../../bower_components/eq.js/dist/eq.min.js"></script>
   <script src="../../../../bower_components/highlightjs/highlight.pack.js"></script>
