--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <ul>
-  <li><a href="dest/pattern-lab">Pattern Lab</a></li>
+  <li><a href="dest/pattern-lab/?p=pages-home">Pattern Lab</a></li>
   <li><a href="dest/sassdoc">SassDoc</a></li>
 </ul>
